--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - "cp config/database.yml.travis config/database.yml"
   - psql -c 'create database travis_ci_test;' -U postgres
   - TEST_CLUSTER_COMMAND="/tmp/elasticsearch-1.0.1/bin/elasticsearch" bundle exec rake elasticsearch:start
+  - bundle exec rake db:migrate RAILS_ENV=test
 
 addons:
   code_climate:
